# agentic_template

./: LICENSE  OLLAMA_SETUP.md  README.md  pyproject.toml
example/: rag_example.py
src/embedding/: transformers_embeddings.py
tests/embedding/: test_qdrant_store.py  test_transformers_embeddings.py
