[build-system]
requires = ["hatchling", "setuptools>=64.0.0", "wheel"]
build-backend = "hatchling.build"

[project]
name = "confluence-rag"
version = "0.1.0"
description = "RAG-based chatbot for Confluence-like knowledge base with access control"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "ML Engineering Team", email = "ml-team@company.com"},
]
keywords = ["rag", "llm", "knowledge-base", "chatbot", "confluence", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Framework :: FastAPI",
]

dependencies = [
    # Core
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    
    # Vector Database & Embeddings
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    "langchain>=0.0.350",
    "langchain-community>=0.0.10",
    "openai>=1.3.0",
    
    # Database & Storage
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",
    "boto3>=1.34.0",
    "minio>=7.2.1",
    
    # ML & NLP
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "accelerate>=0.25.0",
    
    # Document Processing
    "unstructured>=0.10.30",
    "pypdf>=3.17.0",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    
    # Async & Concurrency
    "anyio>=4.0.0",
    "asyncio>=3.4.3",
    "celery>=5.3.4",
    "flower>=2.0.1",
    
    # Monitoring & Observability
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    
    # Utilities
    "click>=8.1.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    "python-multipart>=0.0.6",
    "cryptography>=41.0.0",
    "pyjwt>=2.8.0",
    "passlib>=1.7.4",
    "bcrypt>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-benchmark>=4.0.0",
    "pytest-testdox>=3.0.0",
    
    # Ruff for all linting, formatting, and type checking
    "ruff>=0.1.6",
    
    # Documentation
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-autorefs>=1.0.1",
    
    # Development Tools
    "ipython>=8.17.2",
    "ipdb>=0.13.13",
    "debugpy>=1.8.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.8",
    "notebook>=7.0.0",
    "pre-commit>=3.5.0",
    
    # Testing utilities
    "httpx>=0.25.1",
    "factory-boy>=3.3.0",
    "faker>=21.0.0",
    "freezegun>=1.2.2",
    "respx>=0.20.2",
]

test = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.1",
    "factory-boy>=3.3.0",
    "faker>=21.0.0",
    "freezegun>=1.2.2",
    "respx>=0.20.2",
]

jupyter = [
    "jupyterlab>=4.0.8",
    "ipywidgets>=8.1.1",
    "matplotlib>=3.8.2",
    "pandas>=2.1.4",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "ipympl>=0.9.3",
    "scipy>=1.11.0",
    "networkx>=3.1.0",
]

monitoring = [
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.42b0",
    "opentelemetry-exporter-prometheus>=0.42b0",
    "sentry-sdk>=1.38.0",
    "loguru>=0.7.2",
]

gpu = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    "xformers>=0.0.23",
    "flash-attn>=2.3.0",
]

cloud = [
    "boto3>=1.34.0",
    "google-cloud-storage>=2.13.0",
    "azure-storage-blob>=12.19.0",
    "redis>=5.0.1",
    "pika>=1.3.0",
    "celery[redis]>=5.3.4",
]

[project.urls]
Homepage = "https://github.com/company/confluence-rag"
Documentation = "https://confluence-rag.readthedocs.io"
Repository = "https://github.com/company/confluence-rag.git"
Issues = "https://github.com/company/confluence-rag/issues"
Changelog = "https://github.com/company/confluence-rag/releases"

[project.scripts]
confluence-rag-api = "src.api.main:cli"
confluence-rag-worker = "src.worker.main:cli"
confluence-rag-ingest = "src.scripts.ingest:cli"
confluence-rag-eval = "src.scripts.evaluate:cli"

[project.entry-points."console_scripts"]
rag-cli = "src.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.version]
path = "src/__about__.py"

# ====================== RUFF Configuration (Replaces Black, isort, mypy, flake8) ======================

[tool.ruff]
# Target Python version
target-version = "py311"
# Line length
line-length = 88
# Enable Pyflakes (`F`) and McCabe complexity (`C90`) codes by default
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "YTT", # flake8-2020
    "Q",  # flake8-quotes
    "ANN", # flake8-annotations
    "S",  # flake8-bandit (security)
    "T10", # flake8-debugger
    "ERA", # eradicate (commented-out code)
    "RUF", # ruff-specific rules
    # Type checking rules (replaces mypy)
    "TCH", # type-checking rules
    "FA",  # flake8-future-annotations
    "FIX", # Allow fixes
]
# Ignore rules
ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "ANN102",  # Missing type annotation for `cls` in method
    "ANN401",  # Use `typing.Any` for complex types
    "D",       # Disable pydocstyle (use dedicated docstring linter if needed)
    "S101",    # Allow `assert` in tests (handled in test-specific config)
    "S607",    # Starting a process with a partial executable path
    "PLR0913", # Too many arguments (we'll allow more for ML code)
    "PLR2004", # Magic value used in comparison
    "C901",    # Too complex (ignore for ML code)
    "B008",    # Do not perform function calls in argument defaults
    "B006",    # Do not use mutable data structures for argument defaults
    "B905",    # `zip()` without an explicit `strict=` parameter
]
# Allow unused variables when they start with underscore
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Auto-fix settings
fixable = ["ALL"]
unfixable = [
    "F401",  # Unused imports (need manual review)
    "F841",  # Unused variable (need manual review)
    "B008",  # Function call in argument default
]

[tool.ruff.lint]
# Pyflakes settings
flake8-tidy-imports = {ban-relative-imports = "all"}
# isort replacement
isort = {known-first-party = ["src"]}
# flake8-annotations settings
flake8-annotations = {
    mypy-init-return = true,
    suppress-none-returning = false,
    allow-star-arg-any = true,
}
# flake8-bugbear settings
flake8-bugbear = {extend-immutable-calls = ["fastapi.Depends"]}
# flake8-quotes settings
flake8-quotes = {inline-quotes = "double", multiline-quotes = "double"}
# Security (bandit) settings
flake8-bandit = {check-typed-exception = true}

[tool.ruff.format]
# Formatting configuration (replaces black)
quote-style = "double"
indent-style = "space"
indent-width = 4
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.per-file-ignores]
# Test files
"tests/**/*.py" = [
    "S101",  # Allow assert in tests
    "PLR2004", # Allow magic values in tests
    "ANN",   # Less strict type annotations in tests
    "F821",  # Allow undefined names in fixtures
]
# Migration files
"**/migrations/*.py" = ["ALL"]
# __init__.py files
"**/__init__.py" = ["F401", "F403"]
# Notebooks
"notebooks/**/*.py" = ["E402", "F841", "ANN"]

# Type checking configuration (replaces mypy)
[tool.ruff.lint.flake8-type-checking]
strict = false
exempt-modules = ["pydantic", "sqlalchemy", "fastapi"]
runtime-evaluated-base-classes = ["pydantic.BaseModel", "pydantic_settings.BaseSettings"]
runtime-evaluated-decorators = ["fastapi.applications"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ====================== Test Configuration ======================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-v",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
    "--import-mode=append",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
    "slow: slow running tests",
    "gpu: requires GPU",
    "database: requires database",
    "redis: requires redis",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ResourceWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/__about__.py",
    "src/__init__.py",
    "tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "**/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "typing.TYPE_CHECKING",
]

# ====================== Project-specific Configuration ======================

[tool.confluence-rag]
default_embedding_model = "all-MiniLM-L6-v2"
default_llm_model = "google/flan-t5-base"
chunk_size = 1000
chunk_overlap = 200
max_retrieved_documents = 5
cache_ttl = 300
timeout = 30.0

[tool.confluence-rag.vector_store]
type = "chroma"
persist_directory = "./storage/chroma_db"
collection_name = "confluence_docs"
similarity_metric = "cosine"

[tool.confluence-rag.database]
url = "postgresql://rag_user:rag_password@localhost:5432/confluence_rag"
pool_size = 20
max_overflow = 40
echo = false
pool_pre_ping = true

[tool.confluence-rag.cache]
type = "redis"
url = "redis://localhost:6379/0"
default_ttl = 300
key_prefix = "rag:"

[tool.confluence-rag.api]
host = "0.0.0.0"
port = 8000
workers = 4
log_level = "info"
cors_origins = ["http://localhost:3000", "http://localhost:8080"]
rate_limit = "100/minute"

[tool.confluence-rag.security]
jwt_secret_key = "change-in-production"
jwt_algorithm = "HS256"
access_token_expire_minutes = 30
password_hashing_algorithm = "bcrypt"

# ====================== Pre-commit Configuration ======================

[tool.pre-commit]
default_language_version = {python = "python3.11"}

[[tool.pre-commit.hooks]]
id = "pre-commit-hooks"
stages = ["commit"]

[[tool.pre-commit.hooks]]
id = "ruff-format"
name = "Ruff Format"
description = "Format code with ruff"
entry = ruff format
args = ["--config", "pyproject.toml"]
language = "system"
types_or = ["python"]
pass_filenames = true

[[tool.pre-commit.hooks]]
id = "ruff"
name = "Ruff Lint"
description = "Lint and fix with ruff"
entry = ruff check --fix
args = ["--config", "pyproject.toml"]
language = "system"
types_or = ["python"]
pass_filenames = true

[[tool.pre-commit.hooks]]
id = "ruff-typing"
name = "Ruff Type Checking"
description = "Type checking with ruff"
entry = ruff check --select TCH,ANN
args = ["--config", "pyproject.toml"]
language = "system"
types_or = ["python"]
pass_filenames = true

[[tool.pre-commit.hooks]]
id = "pytest-check"
name = "Pytest Check"
entry = python -m pytest tests/unit/ -xvs -m "not slow and not integration"
language = "system"
pass_filenames = false
always_run = true
stages = ["push"]

[[tool.pre-commit.hooks]]
id = "bandit"
name = "Bandit Security Scan"
entry = bandit -c pyproject.toml -r src/
language = "system"
pass_filenames = false
always_run = true
stages = ["push"]

# ====================== MkDocs Configuration ======================

[tool.mkdocs]
site_name = "Confluence RAG Documentation"
site_dir = "site"
site_description = "RAG-based chatbot for Confluence-like knowledge bases"
site_url = "https://confluence-rag.readthedocs.io/"
repo_url = "https://github.com/company/confluence-rag/"
repo_name = "confluence-rag"

theme = {name = "material"}
extra_css = ["css/extra.css"]
extra_javascript = ["js/extra.js"]

# ====================== About File ======================

# Create src/__about__.py
"""
__version__ = "0.1.0"
__author__ = "ML Engineering Team"
__email__ = "ml-team@company.com"
__description__ = "RAG-based chatbot for Confluence-like knowledge base with access control"
"""